# Plantilla_DS

./: README.md  cookiecutter-quickstart.json  cookiecutter.json  evaluacion.md
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: pyproject.toml  requirements.txt  run.py
{{ cookiecutter.project_slug }}/Notebooks/exploratory/: example_workflow.ipynb
{{ cookiecutter.project_slug }}/docs/: README.md  STRUCTURE.md
{{ cookiecutter.project_slug }}/docs/config/: data_schema.yaml  deployment_config.yaml  model_metadata.yaml  monitoring_config.yaml
{{ cookiecutter.project_slug }}/docs/data/: data_dictionary.md  data_quality.md  data_sources.md
{{ cookiecutter.project_slug }}/docs/model/: experimentation_log.md  model_card.md
{{ cookiecutter.project_slug }}/docs/ops/: deployment.md  monitoring.md
{{ cookiecutter.project_slug }}/docs/templates/: eda_template.md  rfc_template.md
{{ cookiecutter.project_slug }}/scripts/: data_processing.py  download_model.py  model_evaluation.py  model_training.py
{{ cookiecutter.project_slug }}/src/api/: __init__.py  main.py  models.py
{{ cookiecutter.project_slug }}/src/bd/: base.py  oracle_connector.py
{{ cookiecutter.project_slug }}/src/config/: settings.py
{{ cookiecutter.project_slug }}/src/data/: preprocessing.py  quality_checks.py
{{ cookiecutter.project_slug }}/src/features/: __init__.py  engineering.py
{{ cookiecutter.project_slug }}/src/logger/: __init__.py
{{ cookiecutter.project_slug }}/src/models/: dummie_model.py
{{ cookiecutter.project_slug }}/src/notifications/: __init__.py  slack.py
{{ cookiecutter.project_slug }}/src/pipelines/: __init__.py  data_pipeline.py
