[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dummie"
version = "0.1.0"
description = "Proyecto de plantilla para ciencia de datos"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "pyyaml>=6.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "pylint>=2.12.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pylint]
# Formato de salida
output-format = "colorized"
# Puntuación
fail-under = 8.0
# Extensiones
extension-pkg-whitelist = ['pylint_quotes', 'pylint_django']
# Mensajes a deshabilitar
disable = [
    'missing-module-docstring',
    'missing-class-docstring',
    'missing-function-docstring',
    'too-few-public-methods',
    'line-too-long',
]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# addopts = "-v --cov=src --cov-report=term-missing"